[gd_scene load_steps=27 format=2]

[ext_resource path="res://selecionar_fase/nordeste.png" type="Texture" id=1]
[ext_resource path="res://selecionar_fase/sudeste.png" type="Texture" id=2]
[ext_resource path="res://selecionar_fase/sul.png" type="Texture" id=3]
[ext_resource path="res://selecionar_fase/blue.jpg" type="Texture" id=4]
[ext_resource path="res://selecionar_fase/centro.png" type="Texture" id=5]
[ext_resource path="res://selecionar_fase/norte.png" type="Texture" id=6]
[ext_resource path="res://selecionar_fase/brasilblavk.png" type="Texture" id=7]
[ext_resource path="res://selecionar_fase/centro_cinza.png" type="Texture" id=9]
[ext_resource path="res://selecionar_fase/mapa_brasil.gd" type="Script" id=10]
[ext_resource path="res://selecionar_fase/KinematicBody2D.gd" type="Script" id=11]
[ext_resource path="res://selecionar_fase/avião.png" type="Texture" id=12]
[ext_resource path="res://selecionar_fase/nordeste_cinza.png" type="Texture" id=13]
[ext_resource path="res://selecionar_fase/sudeste_cinza.png" type="Texture" id=14]
[ext_resource path="res://selecionar_fase/sul_cinza.png" type="Texture" id=15]
[ext_resource path="res://selecionar_fase/norte_cinza.png" type="Texture" id=16]
[ext_resource path="res://npc_Txt_Box/MEGAMAN10.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://audio/funk.mp3" type="AudioStream" id=18]
[ext_resource path="res://cena_Menu/Cena Principal/Images/menu_item2.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="StreamTexture" id=9]
flags = 4
load_path = "res://.import/rosadosventos (1).png-19833a338fa60fde2639f4eb8ec618bc.stex"

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 0.0

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 17 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 10 )

[node name="Blue" type="Sprite" parent="."]
position = Vector2( 643, 383 )
scale = Vector2( 1.12417, 0.863333 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Brasilblavk" type="Sprite" parent="."]
position = Vector2( 614, 364 )
scale = Vector2( 1.46, 1.474 )
texture = ExtResource( 7 )

[node name="centro" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="centro"]
position = Vector2( -3, 0 )
polygon = PoolVector2Array( 508, 348, 510, 386, 538, 392, 556, 426, 551, 490, 582, 501, 595, 526, 612, 526, 651, 481, 680, 436, 726, 427, 732, 373, 750, 365, 745, 335, 692, 338, 674, 326, 678, 283, 581, 275, 550, 253, 540, 238, 540, 253, 487, 259, 487, 292, 514, 302, 517, 325 )

[node name="centro" type="AnimatedSprite" parent="centro"]
position = Vector2( 616, 382 )
frames = SubResource( 1 )

[node name="Norte" type="Area2D" parent="."]

[node name="norte" type="AnimatedSprite" parent="Norte"]
position = Vector2( 529, 200 )
frames = SubResource( 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Norte"]
polygon = PoolVector2Array( 271, 254, 282, 270, 288, 278, 286, 283, 298, 286, 305, 292, 317, 287, 329, 282, 328, 309, 363, 310, 384, 294, 391, 284, 417, 280, 420, 291, 420, 305, 429, 317, 430, 327, 444, 327, 463, 337, 476, 341, 495, 348, 506, 335, 510, 324, 511, 310, 485, 304, 482, 262, 531, 258, 537, 250, 539, 236, 543, 235, 549, 238, 549, 248, 554, 256, 559, 266, 576, 270, 586, 274, 604, 276, 620, 274, 648, 276, 677, 281, 682, 275, 684, 276, 682, 286, 677, 302, 675, 314, 677, 322, 682, 326, 682, 334, 693, 337, 695, 330, 704, 331, 706, 338, 727, 340, 743, 334, 746, 324, 741, 313, 745, 302, 743, 290, 740, 285, 734, 269, 738, 255, 724, 241, 724, 236, 727, 229, 724, 208, 715, 201, 708, 204, 730, 180, 740, 167, 739, 161, 743, 155, 744, 147, 750, 135, 735, 133, 732, 128, 719, 129, 716, 135, 706, 146, 697, 146, 697, 136, 706, 129, 711, 117, 690, 119, 681, 114, 677, 99, 681, 93, 688, 85, 676, 80, 667, 64, 664, 39, 654, 46, 650, 54, 645, 59, 640, 68, 634, 73, 615, 74, 606, 73, 600, 70, 595, 66, 580, 70, 584, 80, 572, 76, 555, 78, 550, 85, 536, 85, 529, 91, 517, 84, 513, 73, 509, 68, 511, 49, 512, 37, 506, 33, 507, 22, 499, 21, 496, 31, 477, 42, 462, 43, 458, 50, 444, 44, 432, 43, 439, 58, 442, 66, 451, 69, 448, 73, 440, 78, 437, 86, 424, 93, 413, 102, 409, 98, 402, 101, 394, 101, 389, 96, 383, 93, 380, 80, 367, 88, 342, 87, 338, 93, 344, 95, 352, 97, 351, 104, 332, 107, 333, 116, 339, 116, 338, 121, 344, 126, 342, 130, 347, 132, 344, 171, 335, 193, 320, 192, 315, 196, 294, 203, 286, 213, 284, 223, 283, 228, 283, 234, 272, 242, 275, 246 )

[node name="Nordeste" type="Area2D" parent="."]

[node name="nordeste" type="AnimatedSprite" parent="Nordeste"]
position = Vector2( 831, 280 )
frames = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Nordeste"]
polygon = PoolVector2Array( 759, 136, 756, 144, 752, 149, 750, 160, 743, 173, 733, 185, 723, 194, 724, 199, 732, 203, 732, 218, 729, 235, 742, 239, 750, 258, 742, 264, 753, 284, 758, 293, 751, 309, 753, 328, 753, 345, 759, 366, 768, 359, 788, 359, 797, 362, 802, 365, 813, 367, 829, 376, 833, 376, 845, 381, 849, 389, 854, 395, 849, 401, 849, 409, 851, 419, 849, 423, 857, 433, 864, 422, 864, 415, 867, 408, 870, 398, 869, 386, 870, 375, 869, 363, 872, 355, 873, 340, 885, 338, 891, 327, 895, 319, 906, 310, 904, 305, 928, 291, 932, 279, 939, 264, 938, 260, 947, 238, 938, 211, 903, 205, 876, 182, 857, 169, 849, 163, 838, 165, 813, 159, 804, 156, 794, 158, 789, 165, 779, 165, 782, 156, 779, 148, 775, 144, 767, 141 )

[node name="Sudeste" type="Area2D" parent="."]

[node name="sudeste" type="AnimatedSprite" parent="Sudeste"]
position = Vector2( 742, 461 )
frames = SubResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sudeste"]
polygon = PoolVector2Array( 641, 502, 650, 493, 656, 485, 660, 474, 667, 465, 672, 455, 679, 447, 689, 439, 714, 436, 723, 435, 732, 426, 733, 408, 739, 397, 742, 384, 741, 376, 751, 381, 765, 373, 780, 368, 784, 374, 796, 376, 803, 378, 810, 384, 818, 384, 829, 395, 837, 396, 840, 401, 837, 407, 837, 416, 840, 426, 843, 436, 849, 438, 849, 450, 846, 452, 845, 462, 839, 474, 829, 483, 825, 494, 816, 502, 806, 512, 768, 516, 763, 521, 727, 534, 725, 543, 708, 548, 700, 537, 691, 532, 687, 515, 672, 508, 657, 504 )

[node name="Sul" type="Area2D" parent="."]

[node name="sul" type="AnimatedSprite" parent="Sul"]
position = Vector2( 635, 603 )
frames = SubResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sul"]
polygon = PoolVector2Array( 631, 510, 641, 511, 645, 509, 649, 512, 654, 511, 658, 513, 665, 514, 671, 515, 677, 518, 680, 519, 682, 523, 686, 527, 687, 536, 693, 541, 696, 545, 701, 552, 701, 562, 696, 566, 696, 570, 698, 576, 699, 584, 699, 592, 697, 600, 697, 610, 691, 613, 686, 619, 685, 622, 682, 622, 680, 626, 679, 629, 676, 632, 670, 645, 663, 653, 653, 661, 647, 669, 646, 673, 642, 677, 638, 680, 634, 685, 632, 688, 626, 693, 623, 686, 625, 681, 622, 676, 617, 669, 614, 664, 608, 660, 603, 659, 594, 655, 591, 650, 586, 651, 583, 650, 580, 645, 575, 639, 573, 637, 566, 638, 564, 635, 571, 629, 578, 621, 582, 617, 581, 614, 590, 607, 595, 601, 606, 596, 618, 587, 623, 577, 620, 568, 616, 559, 611, 550, 610, 544, 611, 537, 614, 531, 617, 526, 622, 522, 626, 517 )

[node name="Rosadosventos(1)" type="Sprite" parent="."]
visible = false
position = Vector2( 1070, 536 )
texture = SubResource( 9 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 183, 480 )
collision_mask = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Avião" type="Sprite" parent="KinematicBody2D"]
position = Vector2( 0, 1.2 )
scale = Vector2( 0.15, 0.176562 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 14, 1 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="MenuItem2" type="Sprite" parent="."]
position = Vector2( 286, 634 )
scale = Vector2( 0.198065, 0.08 )
texture = ExtResource( 19 )

[node name="mapas_text" type="Label" parent="."]
margin_left = 82.0
margin_top = 619.0
margin_right = 479.0
margin_bottom = 635.0
custom_fonts/font = SubResource( 8 )
text = " Use as setas para viajar pelo Brasil!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 82, 619 )
stream = ExtResource( 18 )
autoplay = true

[connection signal="body_entered" from="centro" to="." method="_on_centro_body_entered"]
[connection signal="body_exited" from="centro" to="." method="_on_centro_body_exited"]
[connection signal="body_entered" from="Norte" to="." method="_on_Norte_body_entered"]
[connection signal="body_exited" from="Norte" to="." method="_on_Norte_body_exited"]
[connection signal="body_entered" from="Nordeste" to="." method="_on_Nordeste_body_entered"]
[connection signal="body_exited" from="Nordeste" to="." method="_on_Nordeste_body_exited"]
[connection signal="body_entered" from="Sudeste" to="." method="_on_Sudeste_body_entered"]
[connection signal="body_exited" from="Sudeste" to="." method="_on_Sudeste_body_exited"]
[connection signal="body_entered" from="Sul" to="." method="_on_Sul_body_entered"]
[connection signal="body_exited" from="Sul" to="." method="_on_Sul_body_exited"]
